--- a/settings.ini
+++ b/settings.ini
@@ -1,12 +1,12 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
-lib_name = nbdev_template
-user = fastai
-# description = A description of your project
-# keywords = some keywords
-# author = Your Name
-# author_email = email@example.com
-# copyright = Your Name or Company Name
+lib_name = s4refsimtool
+user = cmb-s4
+description = CMB-S4 Reference Simulation Tool
+keywords = cosmology
+author = Andrea Zonca
+author_email = code@andreazonca.com
+copyright = CMB-S4
 branch = master
 version = 0.0.1
 min_python = 3.6
