--- a/s4_reference_design.toml
+++ b/s4_reference_design.toml
@@ -34,38 +34,29 @@ number_of_splits = 1
 
     # Telescope names are not used within the software
 
+    [telescopes.SAT]
     # Available SAT tubes (band centers in GHz) are:
     # LFS (30,40), MFLS (85,145.1), MFHS (95,155.1), HFS (220,270)
     # Tubes for each SAT should be 3
-    [telescopes.Fixed_SAT]
-    # Deployed at Pole for the duration of the experiment
 
-    SAT1 = { LFS=0, MFLS= 3, MFHS=0, HFS=0 }
-    SAT3 = { LFS=0, MFLS= 0, MFHS=3, HFS=0 }
-    SAT5 = { LFS=1, MFLS= 0, MFHS=0, HFS=2 }
+    SAT1 = { LFS=0, MFLS= 3, MFHS=0, HFS=0, site="Pole", years=7 }
+    SAT3 = { LFS=0, MFLS= 0, MFHS=3, HFS=0, site="Pole", years=7 }
+    SAT5 = { LFS=1, MFLS= 0, MFHS=0, HFS=2, site="Pole", years=7 }
 
-    [telescopes.Redeployable_SAT]
-    # Deployed initially at Pole if "years_at_Pole" is over zero
-    # Re-deployed to Chile afterwards
+    SAT0 = { LFS=0, MFLS= 3, MFHS=0, HFS=0, site="Pole", years=7 }
+    SAT2 = { LFS=0, MFLS= 0, MFHS=3, HFS=0, site="Pole", years=7 }
+    SAT4 = { LFS=1, MFLS= 0, MFHS=0, HFS=2, site="Pole", years=7 }
 
-    # 7 for reference design, lower value for relocation to Chile
-    # in case of early detection of the tensor to scalar ratio
-    years_at_Pole = 7
-    SAT0 = { LFS=0, MFLS= 3, MFHS=0, HFS=0 }
-    SAT2 = { LFS=0, MFLS= 0, MFHS=3, HFS=0 }
-    SAT4 = { LFS=1, MFLS= 0, MFHS=0, HFS=2 }
-        
+    [telescopes.LAT]
     # Available LAT tubes (band centers in GHz) are:
     # ULFL (20), LFL (27,39), MFL (93,145), HFL (225,278)
     # Tubes for each LAT should be 19
 
-    [telescopes.Legacy_LAT]
     # Legacy survey LAT deployed in Chile
 
-    LAT0 = { ULFL=0, LFL= 2, MFL=12, HFL=5 }
-    LAT1 = { ULFL=0, LFL= 2, MFL=12, HFL=5 }
+    LAT0 = { ULFL=0, LFL= 2, MFL=12, HFL=5, site="Chile", years=7 }
+    LAT1 = { ULFL=0, LFL= 2, MFL=12, HFL=5, site="Chile", years=7 }
 
-    [telescopes.Delensing_LAT]
     # Delensing survey LAT deployed at Pole
 
-    LAT2 = { ULFL=1, LFL= 2, MFL=11, HFL=4 }
+    LAT2 = { ULFL=1, LFL= 2, MFL=11, HFL=4, site="Pole", years=7 }
