feat: add requirements

--- a/settings.ini
+++ b/settings.ini
@@ -19,8 +19,7 @@ license = apache2
 # From 1-7: Planning Pre-Alpha Alpha Beta Production Mature Inactive
 status = 2
 
-# Optional. Same format as setuptools requirements
-# requirements = 
+requirements = healpy numpy toml
 # Optional. Same format as setuptools console_scripts
 # console_scripts = 
 
