feat: setup command line tool

--- a/settings.ini
+++ b/settings.ini
@@ -20,8 +20,7 @@ license = apache2
 status = 2
 
 requirements = healpy numpy toml
-# Optional. Same format as setuptools console_scripts
-# console_scripts = 
+console_scripts = s4refsimtool_run=s4refsimtool.cli:command_line_script
 
 ###
 # You probably won't need to change anything under here,
