--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -21,6 +21,9 @@ entries:
     - output: web,pdf
       title: Noise
       url: /noise
+    - output: web,pdf
+      title: Simulation interface
+      url: /cli
     output: web
     title: s4refsimtool
   output: web
