feat: renamed tool

--- a/settings.ini
+++ b/settings.ini
@@ -1,8 +1,8 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
-lib_name = s4refsimtool
+lib_name = s4_design_sim_tool
 user = cmb-s4
-description = CMB-S4 Reference Simulation Tool
+description = CMB-S4 Design Simulation Tool
 keywords = cosmology
 author = Andrea Zonca
 author_email = code@andreazonca.com
@@ -20,7 +20,7 @@ license = apache2
 status = 2
 
 requirements = healpy numpy toml
-console_scripts = s4refsimtool_run=s4refsimtool.cli:command_line_script
+console_scripts = s4_design_sim_tool=s4_design_sim_tool.cli:command_line_script
 
 ###
 # You probably won't need to change anything under here,
