docs: hitmap and wcov notebook

--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -22,6 +22,9 @@ entries:
       title: Noise
       url: /noise
     - output: web,pdf
+      title: Hitmaps and White noise covariance
+      url: /hitmap_wcov
+    - output: web,pdf
       title: Simulation interface
       url: /cli
     - output: web,pdf
