set observation efficiencies

--- a/s4_reference_design.toml
+++ b/s4_reference_design.toml
@@ -36,17 +36,51 @@ atmosphere_scaling_P = 1.0
 include_noise = false
 
 # between 0 and 1, typically 0.2
-observing_efficiency.default = 0.2
+# remove default so the code errors if a band is not specified
+# observing_efficiency.default = 0.2
 
 # we can override the observing efficiency for specific sites/bands
 # always specify first site, then telescope, then band
-observing_efficiency.Pole.SAT.HFS = 0.2
-observing_efficiency.Pole.LAT.HFL = 0.2
+
+# Copy-pasted from https://docs.google.com/spreadsheets/d/1jR9gSsJ0w1dEO5Jb_URlD3SWYtgFtwBgB3W88p6puo0/edit#gid=1776795091
+# on 4 March 2021
+
+observing_efficiency.Pole.SAT.LFS1  = 0.194656896
+observing_efficiency.Pole.SAT.LFS2  = 0.194656896
+observing_efficiency.Pole.SAT.MFLS1 = 0.194656896
+observing_efficiency.Pole.SAT.MFHS1 = 0.194656896
+observing_efficiency.Pole.SAT.MFLS2 = 0.1914126144
+observing_efficiency.Pole.SAT.MFHS2 = 0.1914126144
+observing_efficiency.Pole.SAT.HFS1  = 0.1359894704
+observing_efficiency.Pole.SAT.HFS2  = 0.0940841664
+
+observing_efficiency.Chile.SAT.LFS1  = 0.2026944
+observing_efficiency.Chile.SAT.LFS2  = 0.2026944
+observing_efficiency.Chile.SAT.MFLS1 = 0.2026944
+observing_efficiency.Chile.SAT.MFHS1 = 0.2026944
+observing_efficiency.Chile.SAT.MFLS2 = 0.19931616
+observing_efficiency.Chile.SAT.MFHS2 = 0.19931616
+observing_efficiency.Chile.SAT.HFS1  = 0.14160456
+observing_efficiency.Chile.SAT.HFS2  = 0.09796896
+
+observing_efficiency.Pole.LAT.ULFPL1 = 0.435712
+observing_efficiency.Pole.LAT.LFPL1  = 0.435712
+observing_efficiency.Pole.LAT.LFPL2  = 0.435712
+observing_efficiency.Pole.LAT.MFPL1  = 0.435712
+observing_efficiency.Pole.LAT.MFPL2  = 0.406272
+observing_efficiency.Pole.LAT.HFPL1  = 0.400384
+observing_efficiency.Pole.LAT.HFPL2  = 0.276736
+
+observing_efficiency.Chile.LAT.LFL1 = 0.249696
+observing_efficiency.Chile.LAT.LFL2 = 0.249696
+observing_efficiency.Chile.LAT.MFL1 = 0.249696
+observing_efficiency.Chile.LAT.MFL2 = 0.249696
+observing_efficiency.Chile.LAT.HFL1 = 0.22032
+observing_efficiency.Chile.LAT.HFL2 = 0.22032
 
 # we can also specify defaults for sites (notice capitalization) or telescopes
-observing_efficiency.Pole.SAT.default = 0.2
-observing_efficiency.Chile.default = 0.2
-
+# observing_efficiency.Pole.SAT.default = 0.2
+# observing_efficiency.Chile.default = 0.2
 
 [telescopes]
 
