--- a/s4_design.toml
+++ b/s4_design.toml
@@ -35,6 +35,10 @@ atmosphere_scaling_P = 1.0
 
 include_noise = false
 
+# fraction of detectors lost during fabrication, generally 0.8
+# this impacts only noise, not atmosphere
+detector_yield_factor = 1.0
+
 # between 0 and 1, typically 0.2
 # remove default so the code errors if a band is not specified
 # observing_efficiency.default = 0.2
